[metadata]
name = explicit
author = Levi Noecker
author-email = levi.noecker@gmail.com
summary = Easy explicit wait helpers for Selenium
description-file = README.rst
home-page = https://github.com/levi-rs/explicit
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    selenium
    explicit
    wait
    implicit

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    explicit

[wheel]
universal = 1

[flake8]
count = True
statistics = True
max-complexity = 10
max-line-length = 100
output-file = {envdir}/flake8.txt
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
