[metadata]
name = explicit
author = Levi Noecker
author-email = levi.noecker@gmail.com
summary = Easy explicit wait helpers for Selenium
description-file = README.rst
home-page = https://github.com/levi-rs/explicit
license = MIT
keywords =
    selenium
    explicit
    wait
    implicit

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    explicit

[wheel]
universal = 1

[flake8]
count = True
statistics = True
max-complexity = 10
max-line-length = 100
output-file = {envdir}/flake8.txt
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
